tests/snapshots/regression/precedence__unary_binds_tighter.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/precedence/unary_binds_tighter.flx
exit_code: 1

error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  tests/fixtures/precedence/unary_binds_tighter.flx:1:1
  |
1 | print(-1 * 2);
  | ^^^^^^^^^^^^^^
  | -------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  tests/fixtures/precedence/unary_binds_tighter.flx:1:1
  |
1 | print(-1 * 2);
  | ^^^^^^^^^^^^^^
  | -------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  tests/fixtures/precedence/unary_binds_tighter.flx:1:1
  |
1 | print(-1 * 2);
  | ^^^^^^^^^^^^^
  | ------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  tests/fixtures/precedence/unary_binds_tighter.flx:2:1
  |
2 | print(!true && false);
  | ^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  tests/fixtures/precedence/unary_binds_tighter.flx:2:1
  |
2 | print(!true && false);
  | ^^^^^^^^^^^^^^^^^^^^^
  | --------------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`

Found 5 errors.
